--- a/gestion-turnos-clinica/package.json
+++ b/gestion-turnos-clinica/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.11.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
