--- a/gestion-turnos-clinica/package.json
+++ b/gestion-turnos-clinica/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "date-fns": "^3.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-calendar": "^4.6.1",
